# lazystream

./: Cargo.toml  README.md  azure-pipelines.yml
.github/workflows/: check-cross.yml  check.yml  release.yml  test.yml
ci/aarch64-unknown-linux-gnu/: Dockerfile
ci/armv7-unknown-linux-gnueabihf/: Dockerfile
src/: api.rs  cast.rs  completions.rs  generate.rs  main.rs  normal.rs  opt.rs  playlist.rs  record.rs  select.rs  stream.rs  streamlink.rs
src/api/: client.rs  model.rs
src/generic_stats_api/: client.rs  model.rs
