[package]
name = "lazystream"
version = "1.11.5"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"

[dependencies]
stats-api = { git = "https://github.com/tarkah/stats-api", rev = "6aa9db46149a2405157e8e6ea929b590ac41c07d" }

failure = "0.1"
chrono = "0.4"
read_input = "0.8"
structopt = "0.3"
colored = "1.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.1"
async-std = { version = "1.0", features = ['unstable'] }

isahc = { version = "1.0", features = ["static-curl", "static-ssl", "http2"] }
mdns = "0.3.1"
once_cell = "1.5"