[package]
name = "lazystream"
version = "1.11.6"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"

[dependencies]
stats-api = { git = "https://github.com/tarkah/stats-api", rev = "33fcd5cda4a79f8a4d954c1ffb7ef9aa9abdf6d2" }

failure = "0.1"
chrono = "0.4"
read_input = "0.8"
structopt = "0.3"
colored = "1.9"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

futures = "0.3.1"
async-std = { version = "1.0", features = ['unstable'] }

isahc = { version = "1.0", features = ["static-curl", "static-ssl", "http2"] }
mdns = "0.3.1"
once_cell = "1.5"